--- a/index.html
+++ b/index.html
@@ -23,20 +23,21 @@
     </div>
     <div>
       <p>
-        評価者
+        🥌評価者🥌
             <select name="name" id="name">
               <option value="">---Please choose an option</option>
               <option value="KOTANI">KOTANI</option>
               <option value="ONODERA">ONODERA</option>
               <option value="OHMIYA">OHMIYA</option>
               <option value="KOBAYASHI">KOBAYASHI</option>
+              <option value="YOSHIMURA">YOSHIMURA</option>
             </select>
        </p>      
     </div>
     <h2>Case01</h2>
     <p>
-      乗心地（ばね上の動き）
-      <select name="ratingBdyCntrl" id="ratingBdyCntrl">
+      🚗乗心地（評価項目Ａ）🚗
+      <select name="ratingBdyCntrl1" id="ratingBdyCntrl1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
         <option value="+2">2</option>
@@ -48,8 +49,8 @@
       </select>
    </p>
     <p>
-      乗心地（ブルブル）
-      <select name="ratingBuru" id="ratingBuru">
+      🚘乗心地（評価項目Ｂ）🚘
+      <select name="ratingBuru1" id="ratingBuru1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
         <option value="+2">2</option>
@@ -61,8 +62,8 @@
       </select>
     </p>
     <p>
-      乗心地（ゴツビリ）
-      <select name="ratingBiri" id="ratingBiri">
+      🚙乗心地（評価項目Ｃ）🚙
+      <select name="ratingBiri1" id="ratingBiri1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
         <option value="+2">2</option>
@@ -79,8 +80,8 @@
         評価送信
       </button>
       <div class="copyright">
-        2024.04.23 DIGプログラミング基礎FDN26 プレゼンコンテンツ<br>
-        copyright © 2024 T.H(TMC)
+        2024.04.23 DIGプログラミング基礎FND26 プレゼンコンテンツ<br>
+        copyright © 2024 T.H(No.11)
     </div>
     <script src="script.js"></script>
   </body>
