--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div>
       <p>
-        🥌評価者🥌
+        🥌評価者🍀
             <select name="name" id="name">
               <option value="">---Please choose an option</option>
               <option value="KOTANI">KOTANI</option>
@@ -36,7 +36,7 @@
     </div>
     <h2>Case01</h2>
     <p>
-      🚗乗心地（評価項目Ａ）🚗
+      🚗乗心地（評価項目Ａ）
       <select name="ratingBdyCntrl1" id="ratingBdyCntrl1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
@@ -49,7 +49,7 @@
       </select>
    </p>
     <p>
-      🚘乗心地（評価項目Ｂ）🚘
+      🚘乗心地（評価項目Ｂ）
       <select name="ratingBuru1" id="ratingBuru1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
@@ -62,7 +62,7 @@
       </select>
     </p>
     <p>
-      🚙乗心地（評価項目Ｃ）🚙
+      🚙乗心地（評価項目Ｃ）
       <select name="ratingBiri1" id="ratingBiri1">
         <option value="">---Please choose an option</option>
         <option value="+3">3</option>
@@ -75,14 +75,23 @@
       </select>
     </p>
     <div>
-      <!-- <button class="submit" type="button"> -->
       <button id="fixed" type="button">
         評価送信
       </button>
-      <div class="copyright">
+    </div>
+    <div>--------------------------</div>
+    <div class="onlyStaff">
+      <button id="viewResult" type="button">
+        （管理者用メニュー）
+      </button>
+    </div> 
+    <div>
+      <p id="result">🥌____________🧹_____________🎯</p>
+    </div>
+    <div class="copyright">
         2024.04.23 DIGプログラミング基礎FND26 プレゼンコンテンツ<br>
         copyright © 2024 T.H(No.11)
     </div>
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
