--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         評価送信
       </button>
     </div>
-    <div>--------------------------</div>
+    <hr class="tailLine" />
     <div class="onlyStaff">
       <button id="viewResult" type="button">
         （管理者用メニュー）
@@ -90,7 +90,7 @@
     </div>
     <div class="copyright">
         2024.04.23 DIGプログラミング基礎FND26 プレゼンコンテンツ<br>
-        copyright © 2024 T.H(No.11)
+        copyright © 2024 T.H(#11)
     </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
