--- a/index.html
+++ b/index.html
@@ -34,46 +34,50 @@
             </select>
        </p>      
     </div>
-    <h2>Case01</h2>
-    <p>
-      🚗乗心地（評価項目Ａ）
-      <select name="ratingBdyCntrl1" id="ratingBdyCntrl1">
-        <option value="">---Please choose an option</option>
-        <option value="+3">3</option>
-        <option value="+2">2</option>
-        <option value="+1">1</option>
-        <option value="0">0</option>
-        <option value="-1">-1</option>
-        <option value="-2">-2</option>
-        <option value="-3">-3</option>
-      </select>
-   </p>
-    <p>
-      🚘乗心地（評価項目Ｂ）
-      <select name="ratingBuru1" id="ratingBuru1">
-        <option value="">---Please choose an option</option>
-        <option value="+3">3</option>
-        <option value="+2">2</option>
-        <option value="+1">1</option>
-        <option value="0">0</option>
-        <option value="-1">-1</option>
-        <option value="-2">-2</option>
-        <option value="-3">-3</option>
-      </select>
-    </p>
-    <p>
-      🚙乗心地（評価項目Ｃ）
-      <select name="ratingBiri1" id="ratingBiri1">
-        <option value="">---Please choose an option</option>
-        <option value="+3">3</option>
-        <option value="+2">2</option>
-        <option value="+1">1</option>
-        <option value="0">0</option>
-        <option value="-1">-1</option>
-        <option value="-2">-2</option>
-        <option value="-3">-3</option>
-      </select>
-    </p>
+    <!-- select-box case1 -->
+    <div id="case1">
+      <h2>Case01</h2>
+      <p>
+        🚗乗心地（評価項目Ａ）
+        <select name="ratingBdyCntrl1" id="ratingBdyCntrl1">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+     </p>
+      <p>
+        🚘乗心地（評価項目Ｂ）
+        <select name="ratingBuru1" id="ratingBuru1">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+      </p>
+      <p>
+        🚙乗心地（評価項目Ｃ）
+        <select name="ratingBiri1" id="ratingBiri1">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+      </p>
+    </div>
+    <!-- fixed-answer, adimin-menu, footer -->
     <div>
       <button id="fixed" type="button">
         評価送信
