--- a/index.html
+++ b/index.html
@@ -78,6 +78,50 @@
       </p>
     </div>
     <!-- fixed-answer, adimin-menu, footer -->
+    <!-- select-box case2 -->
+    <div id="case2">
+      <h2>Case02</h2>
+      <p>
+        🚗乗心地（評価項目Ａ）
+        <select name="ratingBdyCntrl2" id="ratingBdyCntrl2">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+     </p>
+      <p>
+        🚘乗心地（評価項目Ｂ）
+        <select name="ratingBuru2" id="ratingBuru2">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+      </p>
+      <p>
+        🚙乗心地（評価項目Ｃ）
+        <select name="ratingBiri2" id="ratingBiri2">
+          <option value="">---Please choose an option</option>
+          <option value="+3">3</option>
+          <option value="+2">2</option>
+          <option value="+1">1</option>
+          <option value="0">0</option>
+          <option value="-1">-1</option>
+          <option value="-2">-2</option>
+          <option value="-3">-3</option>
+        </select>
+      </p>
+    </div>
+    <!-- fixed-answer, adimin-menu, footer -->
     <div>
       <button id="fixed" type="button">
         評価送信
