--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <!-- select-box case1 -->
     <div id="case1">
-      <h2>Case01</h2>
+      <h2>🚗Case01</h2>
       <p>
         🚗乗心地（評価項目Ａ）
         <select name="ratingBdyCntrl1" id="ratingBdyCntrl1">
@@ -51,7 +51,7 @@
         </select>
      </p>
       <p>
-        🚘乗心地（評価項目Ｂ）
+        🚗乗心地（評価項目Ｂ）
         <select name="ratingBuru1" id="ratingBuru1">
           <option value="">---Please choose an option</option>
           <option value="+3">3</option>
@@ -64,7 +64,7 @@
         </select>
       </p>
       <p>
-        🚙乗心地（評価項目Ｃ）
+        🚗乗心地（評価項目Ｃ）
         <select name="ratingBiri1" id="ratingBiri1">
           <option value="">---Please choose an option</option>
           <option value="+3">3</option>
@@ -80,9 +80,9 @@
     <!-- fixed-answer, adimin-menu, footer -->
     <!-- select-box case2 -->
     <div id="case2">
-      <h2>Case02</h2>
+      <h2>🚙Case02</h2>
       <p>
-        🚗乗心地（評価項目Ａ）
+        🚙乗心地（評価項目Ａ）
         <select name="ratingBdyCntrl2" id="ratingBdyCntrl2">
           <option value="">---Please choose an option</option>
           <option value="+3">3</option>
@@ -95,7 +95,7 @@
         </select>
      </p>
       <p>
-        🚘乗心地（評価項目Ｂ）
+        🚙乗心地（評価項目Ｂ）
         <select name="ratingBuru2" id="ratingBuru2">
           <option value="">---Please choose an option</option>
           <option value="+3">3</option>
